# verifiers

environments/vf_musique_rag/: README.md  pyproject.toml  vf_musique_rag.py
environments/vf_sql_bird/: README.md  pyproject.toml  vf_sql_bird.py
environments/vf_sql_bird_new/: pyproject.toml  vf_sql_bird_new.py
environments/vf_toolhop_multistep/: README.md  pyproject.toml  vf_toolhop_multistep.py
examples/grpo/: train_musique_rag.py  train_sql_bird.py  train_sql_bird_new.py  train_toolhop_multistep.py
rag/: READMErag.md  build_rag_index.py  rag_server.py  requirements.txt  run_scripts.txt  test_rag.py
