[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vf-sql-bird"
version = "0.1.0"
description = "SQL BIRD Environment for Verifiers Framework - Train models on SQL generation using the BIRD dataset"
authors = [
    {name = "Verifiers Team", email = "team@verifiers.ai"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "verifiers",
    "datasets>=2.0.0",
    "openai>=1.0.0",
    "sqlite3",  # Built-in but explicit for clarity
    "pathlib",  # Built-in but explicit for clarity
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/willccbb/verifiers"
Documentation = "https://github.com/willccbb/verifiers/tree/main/environments/vf_sql_bird"
Repository = "https://github.com/willccbb/verifiers.git"
Issues = "https://github.com/willccbb/verifiers/issues"

[tool.hatch.build.targets.wheel]
packages = ["vf_sql_bird.py"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 